Cambios en los nombres de las carpetas

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <header>
   <div class="logo">MONTI</div>
   <div class="auth">
-    <a href="../Publico/iniciodesesion.html" class="btn">Iniciar Sesión</a>
-    <a href="../Publico/registro.html" class="btn">Registrarse</a>
+    <a href="../publico/iniciodesesion.html" class="btn">Iniciar Sesión</a>
+    <a href="../publico/registro.html" class="btn">Registrarse</a>
   </div>
 </header>
 
