--- a/index.html
+++ b/index.html
@@ -1,109 +1,197 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./public.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Monti - Talento en Belleza</title>
+  <link rel="stylesheet" href="public.css" />
 </head>
 <body>
-    
-<header>
-  <div class="logo">MONTI</div>
-  <div class="auth">
-    <a href="../publico/iniciodesesion.html" class="btn">Iniciar Sesión</a>
-    <a href="../publico/registro.html" class="btn">Registrarse</a>
-  </div>
-</header>
+  <header class="floating-header">
+    <nav class="navbar">
+      <div class="logo">MONTI</div>
+      <ul class="nav-links">
+        <li><a href="">Profesionales</a></li>
+        <li><a href="#">Empresas</a></li>
+        <li><a href="#">Comunidad</a></li>
+        <li><a href="#">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<section class="hero">
-  <div class="hero-text">
-    <h2>MONTI PRODUCTION
-      <p style="color: white; font-size: 1.2rem;">Descubre diseños exclusivos y personalizados para tus uñas. ¡Reserva tu cita y luce increíble!</p>
-      <a style="font-size: 1.0rem;" href="#" class="btn">Servicios</a>
-      <a style="font-size: 1.0rem;" href="#" class="btn">Shop</a>
-    </h2>
-  </div>
-  <img src="https://i.pinimg.com/736x/8b/37/73/8b377329e5c6be5d94fd2099140cf32f.jpg" alt="Nail art">
-</section>
+  <!-- Hero Section -->
+<section class="hero-banner">
+  <div class="hero-overlay">
+    <h1 class="hero-title">Impulsamos el talento<br>
+      del sector belleza</h1>
+    <br>
+    <br>
+    <p class="hero-subtext">
+      "Conecta con empresas"<br>
+      "muestra tu portafolio y accede a oportunidades reales"<br>
+      "Monti es tu espacio profesional en línea"
+  </p>
 
-<br><br>
-
-<h3>Cursos Que veras</h3>
-<section class="features">
-  <div class="feature">
-    <img src="https://i.pinimg.com/736x/1b/6b/d1/1b6bd162ed2f8835b96bcfa3cd070b37.jpg" width="300" height="400"/>
-    <h4>Uñas saludables y duraderas</h4>
-    <br>
-    <a href="#" class="btn">Ver</a>
-  </div>
-  <div class="feature">
-    <img src="https://i.pinimg.com/736x/a8/7b/4c/a87b4c12a0a7e5d0e0377e989442a8ed.jpg" width="300" height="400"/>
-    <h4>Estilos de temporada</h4>
-    <br>
-    <a href="#" class="btn">Ver</a>
-  </div>
-  <div class="feature">
-    <img src="https://i.pinimg.com/736x/e3/85/cb/e385cb4070937ccbf37c82b8ad9907a4.jpg" width="300" height="400"/>
-    <h4>Lujo y relajación</h4>
-    <br>
-    <a href="#" class="btn">Ver</a>
+    </p>
+  </div>  
+  <div class="hero-content">
+    <button class="cta-button">Ver Perfil</button>
+    <button class="cte-button">Explorar</button>
   </div>
 </section>
 
-<section class="services">
-  <h3>Nuestros Servicios</h3>
-  <div class="service-list">
-    <div class="service-item">
-      <img src="https://i.pinimg.com/1200x/5d/d9/ce/5dd9ce3f6eab45eb2ecc6ee5a9d36590.jpg" alt="Gel Nails">
-      <h4>Uñas de Gel</h4>
-      <br>
-      <a href="#" class="btn">Ver</a>
+<br>
+<br>
+<br>
+  
+
+<section class="monti-profiles">
+  <h2>Conoce a nuestros profesionales</h2>
+  <div class="profile-grid">
+    <div class="profile-card" style="background-image: url('https://i.pinimg.com/1200x/c1/6f/bb/c16fbb4183e0b9f8044060900338914c.jpg');">
+      <div class="profile-top">
+        <span class="profile-role">Maquilladora</span>
+        <span class="profile-rating">⭐ 4.9</span>
+      </div>
+      <div class="profile-bottom">
+        <div class="profile-info">
+          <h3>Laura Gómez</h3>
+          <p>8 años de experiencia</p>
+        </div>
+        <a href="#" class="profile-btn">➜</a>
+      </div>
     </div>
-    <div class="service-item">
-      <img src="https://i.pinimg.com/736x/5a/5c/e0/5a5ce0d73e45ff89b510f50e36d68dfb.jpg" alt="Bling Nails">
-      <h4>Bling Nails</h4>
-      <br>
-      <a href="#" class="btn">Ver</a>
+
+    <div class="profile-card" style="background-image: url('https://i.pinimg.com/736x/cb/a8/1c/cba81c96c143d5250d18e7c076031d46.jpg');">
+      <div class="profile-top">
+        <span class="profile-role">Barbero</span>
+        <span class="profile-rating">⭐ 4.8</span>
+      </div>
+      <div class="profile-bottom">
+        <div class="profile-info">
+          <h3>Andrés Torres</h3>
+          <p>5 años de experiencia</p>
+        </div>
+        <a href="#" class="profile-btn">➜</a>
+      </div>
     </div>
-    <div class="service-item">
-      <img src="https://i.pinimg.com/736x/47/5f/fa/475ffaa0b1430034f61ba086f68eca54.jpg" alt="Acrylic Nails">
-      <h4>Uñas Acrílicas</h4>
-      <br>
-      <a href="#" class="btn">Ver</a>
-      <br><br>
+
+    <div class="profile-card" style="background-image: url('https://i.pinimg.com/736x/a2/e1/c9/a2e1c98dac67ec044c26496e6a6930aa.jpg');">
+      <div class="profile-top">
+        <span class="profile-role">Especialista en Uñas</span>
+        <span class="profile-rating">⭐ 4.7</span>
+      </div>
+      <div class="profile-bottom">
+        <div class="profile-info">
+          <h3>Camila Ríos</h3>
+          <p>6 años de experiencia</p>
+        </div>
+        <a href="#" class="profile-btn">➜</a>
+      </div>
     </div>
   </div>
 </section>
 
-<section class="about">
-  <div class="about-text">
-    <h3>Sobre Nosotros</h3>
-    <p>En MONTI ofrecemos diseños exclusivos y personalizados para realzar tu estilo. Calidad, higiene y atención profesional en cada cita.</p>
-    <br>
-    <a href="#" class="btn">Conócenos</a>
-  </div>
-  <div class="about-img">
-    <img src="https://i.pinimg.com/1200x/ed/fe/36/edfe369dcf7832a87dd944c8d572ccac.jpg" alt="Nuestro Salón">
+<br>
+<br>
+  
+
+<section class="monti-sponsors">
+  <div class="sponsor-grid">
+    <div class="sponsor-box">
+      <div class="sponsor-text">
+        <h3>+3.000 Empresas aliadas</h3>
+        <p>Marcas que confían en el talento del sector belleza colombiano.</p>
+      </div>
+    </div>
+
+    <div class="sponsor-box">
+      <div class="sponsor-text">
+        <h3>+150 Patrocinios activos</h3>
+        <p>Apoyando eventos, formación y oportunidades profesionales.</p>
+      </div>
+    </div>
+
+    <div class="sponsor-wide">
+      <div class="sponsor-text">
+        <h3>Impulsa tu marca con Monti</h3>
+        <p>Conecta con miles de profesionales y posiciona tu empresa en el ecosistema digital de belleza.</p>
+      </div>
+    </div>
+
+    <div class="sponsor-feature">
+      <div class="sponsor-text">
+        <h3>¿Tu empresa quiere ser aliada?</h3>
+        <p>Únete a nuestra red de patrocinadores y potencia el crecimiento del sector.</p>
+        <a href="#" class="sponsor-btn">Quiero ser aliado</a>
+      </div>
+    </div>
   </div>
 </section>
 
-<br><br>
-<section class="contact-section">
-  <h3>Contáctanos</h3>
-  <p>¿Tienes dudas o deseas agendar tu cita? Escríbenos y te responderemos pronto.</p>
-  <br>
-  <a href="./contacto.html" class="btn">Ir a Contacto</a>
-  <br><br>
-</section>
-<br><br>    
+<br>
+<br>
+  
 
-<footer>
-  <p>&copy; 2025 MONTI - Todos los derechos reservados</p>
+<section class="monti-metrics">
+  <div class="metric">
+    <h2>+3.500</h2>
+    <p>Profesionales registrados</p>
+  </div>
+  <div class="metric">
+    <h2>+12</h2>
+    <p>Ciudades activas en Colombia</p>
+  </div>
+  <div class="metric">
+    <h2>+1.200</h2>
+    <p>Portafolios publicados</p>
+  </div>
+  <div class="metric">
+    <h2>+85.000</h2>
+    <p>Conexiones laborales generadas</p>
+  </div>
+</section>
+
+<br>
+<br>
+  
+  
+
+<footer class="monti-footer">
+  <div class="footer-content">
+    <!-- Información de contacto -->
+    <div class="footer-info">
+      <h2>Contáctanos</h2>
+      <p>Estamos listos para ayudarte a impulsar tu carrera o conectar tu empresa con talento.</p>
+      <div class="contact-details">
+        <p><strong>Dirección:</strong> Calle 85 #15-30, Bogotá, Colombia</p>
+        <p><strong>Email:</strong> contacto@monti.com</p>
+        <p><strong>Teléfono:</strong> +57 320 123 4567</p>
+      </div>
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-whatsapp"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+    </div>
+
+    <!-- Formulario de contacto -->
+    <div class="footer-form">
+      <form>
+        <input type="text" placeholder="Tu nombre" required />
+        <input type="email" placeholder="Correo electrónico" required />
+        <textarea placeholder="Tu mensaje..." required></textarea>
+        <button type="submit">Enviar</button>
+      </form>
+    </div>
+  </div>
+  
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 Monti. Todos los derechos reservados.</p>
+  </div>
 </footer>
-
-
-<script src="./script.js"></script>
 
 </body>
 </html>
